--- a/Canada-Quiz.html
+++ b/Canada-Quiz.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+<link rel="stylesheet" href="menu_styles.css">
+</head>
 <body>
 <p>Question 1</p>
 <p>What is Canada's Capital City? (Select one)</p>
