--- a/Zeerak_Code/menu.html
+++ b/Zeerak_Code/menu.html
@@ -9,79 +9,83 @@
     <link rel="stylesheet" href="menu_styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,300&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container-fluid">
-        <h1>Countrypedia</h1>
-        
+    <div class="container-fluid pt-5">
+        <h1>Countrypedia 🗺</h1>
+        <center>
         <div class="row">
-            <col>
+            <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="canada.html">
                         <img src="/Zeerak_Code/images/pexels-daniel-joseph-petty-756790.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
                         <div class="card-body">
-                                <p class="card-text text-center">Canada</p>
+                            <p class="card-text text-center" style="text-decoration: none;">Canada</p>
                         </div>
                     </a>
                 </div>
-
-            <col>
-            <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                <a href="japan.html">
-                    <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
-                    <div class="card-body">
-                        <p class="card-text text-center">Japan</p>
-                    </div>
-                </a>    
-            </div>
-            </col>
-
-            <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                <a href="germany.html">
-                    <img src="/Zeerak_Code/images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
-                    <div class="card-body">
-                        <p class="card-text text-center">Germany</p>
-                    </div>
-                </a>    
             </div>
 
-            <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                <a href="japan.html">
-                    <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
-                    <div class="card-body">
-                        <p class="card-text text-center">China</p>
-                    </div>
-                </a>    
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <a href="japan.html">
+                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <div class="card-body">
+                            <p class="card-text text-center">Japan</p>
+                        </div>
+                    </a>    
+                </div>
             </div>
 
-            <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                <a href="japan.html">
-                    <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
-                    <div class="card-body">
-                        <p class="card-text text-center">Britain</p>
-                    </div>
-                </a>    
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
+                    <a href="germany.html">
+                        <img src="/Zeerak_Code/images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                        <div class="card-body">
+                            <p class="card-text text-center">Germany</p>
+                        </div>
+                    </a>    
+                </div>
             </div>
 
-            <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                <a href="japan.html">
-                    <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
-                    <div class="card-body">
-                        <p class="card-text text-center">Pakistan</p>
-                    </div>
-                </a>    
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <a href="japan.html">
+                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <div class="card-body">
+                            <p class="card-text text-center">China</p>
+                        </div>
+                    </a>    
+                </div>
             </div>
 
-            <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                <a href="japan.html">
-                    <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
-                    <div class="card-body">
-                        <p class="card-text text-center">India</p>
-                    </div>
-                </a>    
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <a href="japan.html">
+                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <div class="card-body">
+                            <p class="card-text text-center">Pakistan</p>
+                        </div>
+                    </a>    
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <a href="japan.html">
+                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <div class="card-body">
+                            <p class="card-text text-center">India</p>
+                        </div>
+                    </a>    
+                </div>
             </div>
         </div>
+        </center>
     </div>    
 </body>
 </html>
