--- a/China-Quiz.html
+++ b/China-Quiz.html
@@ -1,13 +1,27 @@
 <html>
 <head>
-<link rel="stylesheet" href="menu_styles.css">
+<!--<link rel="stylesheet" href="quiz_styles.css">-->
+<style>
+*{
+    background-color: black;
+}
+p{
+    color: white;
+}
+label{
+color:white;
+}
+button{
+color:white;
+}
+</style>
 </head>
 <body>
 <p>Question 1</p>
 <p>What is China's Capital City? (Select one)</p>
                                     <input class="form-check-input" type="checkbox" value="" id = 0>
                                     <label class="form-check-label" for="flexCheckDefault">
-                                        a. shenzhen
+                                        a. Shenzhen
                                     </label>
                                 </div>
 
