--- a/India-Quiz.html
+++ b/India-Quiz.html
@@ -1,6 +1,21 @@
 <html>
 <head>
-<link rel="stylesheet" href="menu_styles.css">
+<!--<link rel="stylesheet" href="quiz_styles.css">-->
+<style>
+*{
+    background-color: black;
+}
+p{
+    color: white;
+}
+label{
+color:white;
+}
+}
+button{
+color:white;
+}
+</style>
 </head>
 <body>
 <p>Question 1</p>
