--- a/menu.html
+++ b/menu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Name TBD</title>
+    <title>CountryPedia 🗺</title>
     <link rel="stylesheet" href="menu_styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -16,13 +16,13 @@
 
 <body>
     <div class="container-fluid pt-5">
-        <h1>Countrypedia 🗺</h1>
+        <h1>CountryPedia 🗺</h1>
         <center>
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="canada.html">
-                        <img src="/Zeerak_Code/images/pexels-daniel-joseph-petty-756790.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                        <img src="images/pexels-daniel-joseph-petty-756790.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
                         <div class="card-body">
                             <p class="card-text text-center" style="text-decoration: none;">Canada</p>
                         </div>
@@ -33,7 +33,7 @@
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="japan.html">
-                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">Japan</p>
                         </div>
@@ -44,18 +44,20 @@
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
                     <a href="germany.html">
-                        <img src="/Zeerak_Code/images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                        <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
                         <div class="card-body">
                             <p class="card-text text-center">Germany</p>
                         </div>
                     </a>    
                 </div>
             </div>
-
+        </div>
+        
+        <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="japan.html">
-                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">China</p>
                         </div>
@@ -66,7 +68,7 @@
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="japan.html">
-                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">Pakistan</p>
                         </div>
@@ -77,7 +79,7 @@
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="japan.html">
-                        <img src="/Zeerak_Code/images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">India</p>
                         </div>
@@ -85,6 +87,7 @@
                 </div>
             </div>
         </div>
+    </div>
         </center>
     </div>    
 </body>
