--- a/menu.html
+++ b/menu.html
@@ -57,7 +57,7 @@
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="japan.html">
-                        <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <img src="images/960x0.jpg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">China</p>
                         </div>
@@ -68,7 +68,7 @@
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="japan.html">
-                        <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <img src="images/attabad-lake-pakistan_16x9.jpg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">Pakistan</p>
                         </div>
@@ -79,7 +79,7 @@
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <a href="japan.html">
-                        <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                        <img src="images/s0i_qgfG-1380x690.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">India</p>
                         </div>
