--- a/canada.html
+++ b/canada.html
@@ -16,7 +16,62 @@
 
 <body>
     <div class="container-fluid pt-5">
-        <h1>Canada</h1>
+        <h1>Canada 🍁</h1>
+        <center>
+        <div class="row">
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                    <div class="card-body">
+                        <p id="canada">Capital City: Ottawa, Ontario</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <div class="card-body">
+                        <p id="canada">Population: 38,141,706 (2021)</p>
+                    </div>    
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
+                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <div class="card-body">
+                        <p id="canada">National fruit: Blueberry</p>
+                    </div>   
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
+                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <div class="card-body">
+                        <p id="canada">National animal: Beaver</p>
+                    </div>   
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
+                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <div class="card-body">
+                        <p id="canada">Famous Landmarks: <br>
+                            1 - Niagara Falls, Ontario
+                            <br> 2 - CN Tower, Toronto, Ontario
+                            <br> 3 - Hopewell Rocks, New Brunswick
+                            <br> 4 - Lake Louise, Alberta
+                            <br> 5 - Parliament Building, Ottawa, Ontario
+                        </p>
+                    </div>   
+                </div>
+            </div>
+
+        </div>
+        </center>
     </div>
 </body>
 </html>
