--- a/China-Quiz.html
+++ b/China-Quiz.html
@@ -11,7 +11,7 @@ p{
 label{
 color:white;
 }
-button{
+.button{
 color:white;
 }
 </style>
@@ -162,7 +162,7 @@ color:white;
                                     ];
                                 </script>
 								            <div class="container-fluid pb-3">
-                <button id = "submit" style="border:none;" onclick="checkBox()">submit</button>
+                <button id = "submit"  class="button" style="color:white" style="border:none;" onclick="checkBox()">submit</button>
             </div>
 			<div id= "outcome"></div>
 								           <script>
