--- a/Japan-Quiz.html
+++ b/Japan-Quiz.html
@@ -12,7 +12,7 @@ label{
 color:white;
 }
 }
-button{
+.button{
 color:white;
 }
 </style>
@@ -163,7 +163,7 @@ color:white;
                                     ];
                                 </script>
 								            <div class="container-fluid pb-3">
-                <button id = "submit" style="border:none;" onclick="checkBox()">submit</button>
+                <button class="button" style="color:white" id = "submit" style="border:none;" onclick="checkBox()">submit</button>
             </div>
 			<div id= "outcome"></div>
 								           <script>
