--- a/Pakistan-Quiz.html
+++ b/Pakistan-Quiz.html
@@ -13,7 +13,7 @@ label{
 color:white;
 }
 }
-button{
+.button{
 color:white;
 }
 </style>
@@ -164,7 +164,7 @@ color:white;
                                     ];
                                 </script>
 								            <div class="container-fluid pb-3">
-                <button id = "submit" style="border:none;" onclick="checkBox()">submit</button>
+                <button id = "submit"  class="button" style="color:white" style="border:none;" onclick="checkBox()">submit</button>
             </div>
 			<div id= "outcome"></div>
 								           <script>
