--- a/germany.html
+++ b/germany.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Japan</title>
+    <title>Germany</title>
     <link rel="stylesheet" href="menu_styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
@@ -16,14 +16,14 @@
 
 <body>
     <div class="container-fluid pt-5">
-        <h1>Japan</h1>
+        <h1>Germany</h1>
         <center>
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
                     <div class="card-body">
-                        <p id="canada">Capital City: Tokyo</p>
+                        <p id="canada">Capital City: Berlin</p>
                     </div>
                 </div>
             </div>
@@ -32,7 +32,7 @@
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
                     <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                     <div class="card-body">
-                        <p id="canada">Population: 126,007,204 (2021)</p>
+                        <p id="canada">Population: 84,108,395</p>
                     </div>    
                 </div>
             </div>
@@ -41,7 +41,7 @@
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
                     <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
                     <div class="card-body">
-                        <p id="canada">National fruit: Persimmons</p>
+                        <p id="canada">National fruit: Apple</p>
                     </div>   
                 </div>
             </div>
@@ -50,7 +50,8 @@
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
                     <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
                     <div class="card-body">
-                        <p id="canada">National animal: Green Pheasant</p>
+                        <p id="canada">	National animal: Federal Eagle 
+</p>
                     </div>   
                 </div>
             </div>
@@ -60,10 +61,11 @@
                     <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
                     <div class="card-body">
                         <p id="canada">Famous Landmarks: <br>
-                            1 - Mount Fuji
-                            <br> 2 - Shibuya Crossing
-                            <br> 3 - Itsukushima Shrine
-                            <br> 4 - Dotonbori
+                            1 - Mount Zugspizte
+                            <br> 2 - Cologne Cathedral
+                            <br> 3 - Bastei
+                            <br> 4 - Lake Constance
+							<br> 5 - Beethoven Monument
                         </p>
                     </div>   
                 </div>
