--- a/india.html
+++ b/india.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container-fluid pt-5">
-        <h1>Inidas</h1>
+        <h1>Inida</h1>
         <center>
         <div class="row">
             <div class="col">
