--- a/canada.html
+++ b/canada.html
@@ -30,7 +30,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <img src="images/crowdcad.jpg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                     <div class="card-body">
                         <p id="canada">Population: 38,141,706 (2021)</p>
                     </div>    
@@ -39,20 +39,27 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/blueberries.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
                     <div class="card-body">
                         <p id="canada">National fruit: Blueberry</p>
                     </div>   
                 </div>
             </div>
+        </div>
 
+        <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/beaver.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
                     <div class="card-body">
                         <p id="canada">National animal: Beaver</p>
                     </div>   
                 </div>
+            </div>
+
+            <div class="col">
+                <a href= menu.html id="ReturnMenuBtn" role="button">Return To Menu</a>
+                <a href= Canada-Quiz.html id="ReturnMenuBtn" role="button" target="blank">Start Quiz</a>
             </div>
 
             <div class="col">
@@ -68,8 +75,7 @@
                         </p>
                     </div>   
                 </div>
-            </div>
-
+            </div>    
         </div>
         </center>
     </div>
