--- a/Pakistan-Quiz.html
+++ b/Pakistan-Quiz.html
@@ -1,10 +1,17 @@
 <html>
 <head>
-<head>
 <!--<link rel="stylesheet" href="quiz_styles.css">-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@1,300&display=swap" rel="stylesheet">
+</head>
+
 <style>
 *{
     background-color: black;
+    font-family: 'Raleway', sans-serif;
 }
 p{
     color: white;
@@ -12,12 +19,13 @@ p{
 label{
 color:white;
 }
-}
+
 .button{
 color:white;
 }
+
 </style>
-</head>
+
 <body>
 <p>Question 1</p>
 <p>What is Pakistan's Capital City? (Select one)</p>
@@ -164,7 +172,7 @@ color:white;
                                     ];
                                 </script>
 								            <div class="container-fluid pb-3">
-                <button id = "submit"  class="button" style="color:white" style="border:none;" onclick="checkBox()">submit</button>
+                                                <button id = "submit"  class="button" style="margin-top: 1rem; color:white" style="border:none;" onclick="checkBox()">Submit</button>
             </div>
 			<div id= "outcome"></div>
 								           <script>
