--- a/canada.html
+++ b/canada.html
@@ -20,8 +20,8 @@
         <center>
         <div class="row">
             <div class="col">
-                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                <div id="disappear" class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Ottawa, Ontario, Canada">
                     <div class="card-body">
                         <p id="canada">Capital City: Ottawa, Ontario</p>
                     </div>
@@ -29,8 +29,8 @@
             </div>
 
             <div class="col">
-                <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/crowdcad.jpg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                <div id="disappear" class="card bg-dark text-white pd-0" style="width: 20rem;">
+                    <img src="images/crowdcad.jpg" class="card-img-top" alt="Image of crowd">
                     <div class="card-body">
                         <p id="canada">Population: 38,141,706 (2021)</p>
                     </div>    
@@ -38,8 +38,8 @@
             </div>
 
             <div class="col">
-                <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/blueberries.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                <div id="disappear" class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
+                    <img src="images/blueberries.jpg" style="width: 19.9rem;" alt="Image of blueberries">
                     <div class="card-body">
                         <p id="canada">National fruit: Blueberry</p>
                     </div>   
@@ -49,8 +49,8 @@
 
         <div class="row">
             <div class="col">
-                <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/beaver.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                <div id="disappear" class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
+                    <img src="images/beaver.jpg" style="width: 19.9rem;" alt="Image of Beaver">
                     <div class="card-body">
                         <p id="canada">National animal: Beaver</p>
                     </div>   
@@ -63,8 +63,8 @@
             </div>
 
             <div class="col">
-                <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                <div id="disappear" class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
+                    <img src="images/cn tower.jpg" style="width: 19.9rem;" alt="Image of Cn tower">
                     <div class="card-body">
                         <p id="canada">Famous Landmarks: <br>
                             1 - Niagara Falls, Ontario
