--- a/india.html
+++ b/india.html
@@ -16,12 +16,12 @@
 
 <body>
     <div class="container-fluid pt-5">
-        <h1>Inida</h1>
+        <h1>India</h1>
         <center>
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                    <img src="images/delhi.jpg" class="card-img-top" alt="Image of new delhi">
                     <div class="card-body">
                         <p id="canada">Capital City: New Delhi</p>
                     </div>
@@ -30,7 +30,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <img src="images/indiacrowd.jpg" class="card-img-top" alt="Image of crowd">
                     <div class="card-body">
                         <p id="canada">Population: 1.366 Billion</p>
                     </div>    
@@ -39,16 +39,17 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/mango.jpeg" style="width: 19.9rem;" alt="Image of mangoes">
                     <div class="card-body">
                         <p id="canada">National fruit: Mango</p>
                     </div>   
                 </div>
             </div>
-
+</div>
+<div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/tiger.jpg" style="width: 19.9rem;" alt="Image of tiger">
                     <div class="card-body">
                         <p id="canada">	National animal: Tiger
                     </div>   
@@ -56,8 +57,13 @@
             </div>
 
             <div class="col">
+                <a href= menu.html id="ReturnMenuBtn" role="button">Return To Menu</a>
+                <a href= India-Quiz.html id="ReturnMenuBtn" role="button" target="blank">Start Quiz</a>
+            </div>
+
+            <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/redfort.jpeg" style="width: 19.9rem;" alt="Image of Red Fort">
                     <div class="card-body">
                         <p id="canada">Famous Landmarks: <br>
                             1 - Taj Mahal
@@ -69,7 +75,7 @@
                     </div>   
                 </div>
             </div>
-
+</div>
         </div>
         </center>
     </div>
