--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,7 @@
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <a href="japan.html">
+                    <a href="china.html">
                         <img src="images/960x0.jpg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">China</p>
@@ -67,7 +67,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <a href="japan.html">
+                    <a href="pakistan.html">
                         <img src="images/attabad-lake-pakistan_16x9.jpg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">Pakistan</p>
@@ -78,7 +78,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <a href="japan.html">
+                    <a href="india.html">
                         <img src="images/s0i_qgfG-1380x690.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
                         <div class="card-body">
                             <p class="card-text text-center">India</p>
