--- a/china.html
+++ b/china.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                    <img src="images/beijing.jpg" class="card-img-top" alt="Image of Beijing">
                     <div class="card-body">
                         <p id="canada">Capital City: Beijing</p>
                     </div>
@@ -30,7 +30,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <img src="images/chinacrowd.jpg" class="card-img-top" alt="Image of crowd">
                     <div class="card-body">
                         <p id="canada">Population: 1,446,116,690 (2021)</p>
                     </div>    
@@ -39,16 +39,18 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/fuzzy kiwi.jpg" style="width: 19.9rem;" alt="Image of fuzzy kiwifruit">
                     <div class="card-body">
                         <p id="canada">National fruit: Fuzzy Kiwifuit</p>
                     </div>   
                 </div>
             </div>
+            </div>
 
+            <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/panda.jpg" style="width: 19.9rem;" alt="Image of panda">
                     <div class="card-body">
                         <p id="canada">	National animal: Giant Panda
 </p>
@@ -57,8 +59,13 @@
             </div>
 
             <div class="col">
+                <a href= menu.html id="ReturnMenuBtn" role="button">Return To Menu</a>
+                <a href= China-Quiz.html id="ReturnMenuBtn" role="button" target="blank">Start Quiz</a>
+            </div>
+
+            <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/greatWallofChina.jpg" style="width: 19.9rem;" alt="Image of great wall of china">
                     <div class="card-body">
                         <p id="canada">Famous Landmarks: <br>
                             1 - Great Wall of China, Northern China
@@ -70,7 +77,7 @@
                     </div>   
                 </div>
             </div>
-
+</div>
         </div>
         </center>
     </div>
