--- a/germany.html
+++ b/germany.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                    <img src="images/berlin.jpeg" class="card-img-top" alt="Image of Berlin">
                     <div class="card-body">
                         <p id="canada">Capital City: Berlin</p>
                     </div>
@@ -30,7 +30,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <img src="images/germanycrowd.jpg" class="card-img-top" alt="Image of crowd">
                     <div class="card-body">
                         <p id="canada">Population: 84,108,395</p>
                     </div>    
@@ -39,16 +39,17 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/apples.jpeg" style="width: 19.9rem;" alt="Image of apples">
                     <div class="card-body">
                         <p id="canada">National fruit: Apple</p>
                     </div>   
                 </div>
             </div>
-
+</div>
+<div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/federal eagle.jpg" style="width: 19.9rem;" alt="Image of federal eagle">
                     <div class="card-body">
                         <p id="canada">	National animal: Federal Eagle 
 </p>
@@ -57,8 +58,13 @@
             </div>
 
             <div class="col">
+                <a href= menu.html id="ReturnMenuBtn" role="button">Return To Menu</a>
+                <a href= Germany-Quiz.html id="ReturnMenuBtn" role="button" target="blank">Start Quiz</a>
+            </div>
+
+            <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/beethoven.jpg" style="width: 19.9rem;" alt="Image of beethoven monument">
                     <div class="card-body">
                         <p id="canada">Famous Landmarks: <br>
                             1 - Mount Zugspizte
@@ -70,7 +76,7 @@
                     </div>   
                 </div>
             </div>
-
+</div>
         </div>
         </center>
     </div>
