--- a/japan.html
+++ b/japan.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                    <img src="images/tokyo.jpg" class="card-img-top" alt="Image of Tokyo">
                     <div class="card-body">
                         <p id="canada">Capital City: Tokyo</p>
                     </div>
@@ -30,7 +30,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <img src="images/japancrowd.jpg" class="card-img-top" alt="Image of crowd">
                     <div class="card-body">
                         <p id="canada">Population: 126,007,204 (2021)</p>
                     </div>    
@@ -39,16 +39,16 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/persimmons.jpg" style="width: 19.9rem;" alt="Image of persimmons>
                     <div class="card-body">
                         <p id="canada">National fruit: Persimmons</p>
                     </div>   
                 </div>
             </div>
-
+        <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/greenPheasant.jpg" style="width: 19.9rem;" alt="Image of Green Pheasant">
                     <div class="card-body">
                         <p id="canada">National animal: Green Pheasant</p>
                     </div>   
@@ -56,8 +56,13 @@
             </div>
 
             <div class="col">
+                <a href= menu.html id="ReturnMenuBtn" role="button">Return To Menu</a>
+                <a href= Japan-Quiz.html id="ReturnMenuBtn" role="button" target="blank">Start Quiz</a>
+            </div>
+
+            <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/mountFuji.jpg" style="width: 19.9rem;" alt="Image of mount fuji">
                     <div class="card-body">
                         <p id="canada">Famous Landmarks: <br>
                             1 - Mount Fuji
@@ -68,7 +73,7 @@
                     </div>   
                 </div>
             </div>
-
+</div>
         </div>
         </center>
     </div>
