--- a/pakistan.html
+++ b/pakistan.html
@@ -21,7 +21,7 @@
         <div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/ottawa.jpg" class="card-img-top" alt="Image of Canadian Flag in Forest">
+                    <img src="images/mosque.jpg" class="card-img-top" alt="Image of Faisal Mosque">
                     <div class="card-body">
                         <p id="canada">Capital City: Islamabad</p>
                     </div>
@@ -30,7 +30,7 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem;">
-                    <img src="images/tokyo_japan_cherryBlossom.jpeg" class="card-img-top" alt="Image of cherry blossom trees in Tokyo, Japan">
+                    <img src="images/crowdPak.jpg" class="card-img-top" alt="Image of crowd">
                     <div class="card-body">
                         <p id="canada">Population: 216.6 Million</p>
                     </div>    
@@ -39,16 +39,17 @@
 
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/mango.jpeg" style="width: 19.9rem;" alt="Image of mangoes">
                     <div class="card-body">
                         <p id="canada">National fruit: Mango</p>
                     </div>   
                 </div>
             </div>
-
+</div>
+<div class="row">
             <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/markhor.jpg" style="width: 19.9rem;" alt="Image of markhor">
                     <div class="card-body">
                         <p id="canada">	National animal: Markhor
                     </div>   
@@ -56,8 +57,13 @@
             </div>
 
             <div class="col">
+                <a href= menu.html id="ReturnMenuBtn" role="button">Return To Menu</a>
+                <a href= Pakistan-Quiz.html id="ReturnMenuBtn" role="button" target="blank">Start Quiz</a>
+            </div>
+
+            <div class="col">
                 <div class="card bg-dark text-white pd-0" style="width: 20rem; object-fit: cover;">
-                    <img src="images/germany.jpg" style="width: 19.9rem;" alt="Image of Reichstag, Berlin">
+                    <img src="images/swat-valley.jpg" style="width: 19.9rem;" alt="Image of Swat Valley">
                     <div class="card-body">
                         <p id="canada">Famous Landmarks: <br>
                             1 - Swat Valley
@@ -69,7 +75,7 @@
                     </div>   
                 </div>
             </div>
-
+</div>
         </div>
         </center>
     </div>
